--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><H1>LION AND MOUSE</H1></title>
+    <title>LION</title>
   
 </head>
 <body>
+  <H1>lion and mouse kk</H1>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6e3x3IaZlYGD6wcfpryMJQQ13zwkE-yccKA&usqp=CAU" alt="">
 </body>
 </html>
