--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  Tanto o ratinho pediu e implorou que o leão desistiu de esmagá-lo e deixou que fosse embora. Algum tempo depois o leão ficou preso na rede de uns caçadores.<br>
  Não conseguindo se soltar, fazia a floresta inteira tremer com seus urros de raiva.<br>
  Nisso apareceu o ratinho, e com seus dentes afiados roeu as cordas e soltou o leão.<br>
- Moral: Uma boa ação ganha outra.<br></h2>
+ <br><i>Moral: Uma boa ação ganha outra.<i></i><br></h2>
     <img src="https://i1.sndcdn.com/artworks-xdUrBYHQqyViC2r7-Vy9Row-t500x500.jpg" alt=""><br>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/YJyy3VeTXFQ?si=ajy3aMLUicw9zTzJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     
