--- a/index.html
+++ b/index.html
@@ -5,42 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O Leão e o Ratinho</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 20px;
-            background-color: #f9f9f9;
-        }
-        h1 {
-            color: #333;
-        }
-        h2 {
-            color: #555;
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-            margin: 20px 0;
-        }
-        iframe {
-            display: block;
-            margin: 20px 0;
-            border: none;
-        }
-    </style>
 </head>
 <body>
-    <h1>O Leão e o Ratinho</h1>
-    <h2>
-        Um leão, cansado de tanto caçar, dormia espichado debaixo da sombra boa de uma árvore. Vieram uns ratinhos passear em cima dele e ele acordou. <br> 
-        Todos conseguiram fugir, menos um, que o leão prendeu debaixo da pata.<br>
-        Tanto o ratinho pediu e implorou que o leão desistiu de esmagá-lo e deixou que fosse embora. Algum tempo depois, o leão ficou preso na rede de uns caçadores.<br>
-        Não conseguindo se soltar, fazia a floresta inteira tremer com seus urros de raiva.<br>
-        Nisso, apareceu o ratinho, e com seus dentes afiados, roeu as cordas e soltou o leão.<br>
-        <br><strong>Moral: Uma boa ação ganha outra.</strong><br>
-    </h2>
-    <img src="https://i1.sndcdn.com/artworks-xdUrBYHQqyViC2r7-Vy9Row-t500x500.jpg" alt="Ilustração do leão e o ratinho">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/YJyy3VeTXFQ?si=ajy3aMLUicw9zTzJ" title="O Leão e o Ratinho - vídeo" allowfullscreen></iframe>
+    <div class="container">
+        <h1>O Leão e o Ratinho</h1>
+        <h2>
+            Um leão, cansado de tanto caçar, dormia espichado debaixo da sombra boa de uma árvore. Vieram uns ratinhos passear em cima dele e ele acordou. <br> 
+            Todos conseguiram fugir, menos um, que o leão prendeu debaixo da pata.<br>
+            Tanto o ratinho pediu e implorou que o leão desistiu de esmagá-lo e deixou que fosse embora. Algum tempo depois, o leão ficou preso na rede de uns caçadores.<br>
+            Não conseguindo se soltar, fazia a floresta inteira tremer com seus urros de raiva.<br>
+            Nisso, apareceu o ratinho, e com seus dentes afiados, roeu as cordas e soltou o leão.<br>
+            <br><strong>Moral: Uma boa ação ganha outra.</strong><br>
+        </h2>
+        <img src="https://i1.sndcdn.com/artworks-xdUrBYHQqyViC2r7-Vy9Row-t500x500.jpg" alt="Ilustração do leão e o ratinho">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/YJyy3VeTXFQ?si=ajy3aMLUicw9zTzJ" title="O Leão e o Ratinho - vídeo" allowfullscreen></iframe>
+    </div>
 </body>
 </html>
